[package]
name = "rust-clacc"
version = "3.0.2"
authors = ["John Driscoll <johnoliverdriscoll@gmail.com>"]
description = "Rust implementanion of a CL universal accumulator"
repository = "https://github.com/johnoliverdriscoll/rust-clacc"
documentation = "https://docs.rs/rust-clacc"
license = "MIT"
keywords = ["crypto", "cryptography", "accumulator", "gmp"]
categories = [
  "algorithms",
  "cryptography",
  "data-structures",
  "embedded"
]
edition = "2021"

[lib]
name = "clacc"
path = "src/clacc.rs"

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false

[features]
default = ["blake2", "bigint"]
blake2 = ["dep:blake2"]
gmp = ["dep:rust-gmp-serde"]
bigint = ["dep:num-bigint", "dep:num-integer", "dep:num-modular", "dep:num-prime"]
ripemd = ["dep:ripemd"]
serde = ["dep:serde", "rust-gmp-serde?/serde_support", "num-bigint?/serde"]

[dependencies]
blake2 = {version = "0.10.6", optional = true}
modinverse = {version = "0.1.1", optional = true}
num-bigint = {version = "0.4.3", optional = true}
num-integer = {version = "0.1.45", optional = true}
num-modular = {version = "0.5.1", optional = true}
num-prime = {version = "0.4.3", optional = true}
ripemd = {version = "0.1.3", optional = true}
rust-gmp-serde = {version = "0.5.0", optional = true}
serde = {version = "1.0.152", optional = true, features = ["derive"]}

[dev-dependencies]
criterion = "0.4.0"
crossbeam = "0.8.2"
num_cpus = "1.15.0"
rand = "0.8.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
