[package]
name = "rust-clacc"
version = "3.3.0"
authors = ["John Driscoll <johnoliverdriscoll@gmail.com>"]
description = "Rust implementanion of a CL universal accumulator"
repository = "https://github.com/johnoliverdriscoll/rust-clacc"
documentation = "https://docs.rs/rust-clacc"
license = "MIT"
keywords = ["crypto", "cryptography", "accumulator", "gmp"]
categories = [
  "algorithms",
  "cryptography",
  "data-structures",
  "embedded"
]
edition = "2021"

[lib]
name = "clacc"
path = "src/lib.rs"

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false

[features]
default = ["bigint"]
gmp = ["dep:rust-gmp"]
bigint = ["dep:num-bigint", "dep:num-integer", "dep:num-modular", "dep:num-prime"]

[dependencies]
num-bigint = {version = "0.4.4", optional = true}
num-integer = {version = "0.1.45", optional = true}
num-modular = {version = "0.5.1", optional = true}
num-prime = {version = "0.4.3", optional = true}
rust-gmp = {version = "0.5.0", optional = true}

[dev-dependencies]
criterion = "0.5.1"
crossbeam = "0.8.2"
num_cpus = "1.16.0"
rand = "0.8.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
